samples/_failures_safe/1761711307_c2e1fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99adaebe.c: In function ‘main’:
./samples/SAFE/__tmp_99adaebe.c:168:9: error: expected declaration or statement at end of input
  168 |         }
      |         ^
./samples/SAFE/__tmp_99adaebe.c:168:9: error: expected declaration or statement at end of input
